--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -7,6 +7,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
+      - uses: eslint-plugin-import
+        with:
+          version: 2.2.0
+
       - name: install dependencies
         run: npm install --no-frozen-lockfile
       
