--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -3,15 +3,11 @@ on: push
 jobs:
   tests:
     runs-on: ubuntu-latest
-    if: "!contains(github.event.head_commit.message, '[skip ci]')"
     steps:
       - uses: actions/checkout@v3
 
       - name: install dependencies
-        run: npm install
-      
-      - name: linter
-        run : npm lint
+        run: npm install --legacy-peer-deps
 
       - name: run tests
         run: npm test
