--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -11,6 +11,9 @@ jobs:
 
       - name: run tests
         run: npm test
+      
+      - name: Build file
+        run: npm run build
 
       - name: Deploy production to Netlify
         uses: South-Paw/action-netlify-deploy@v1.2.0
