--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -13,7 +13,7 @@ jobs:
         run: npm test
       
       - name: Build file
-        run: npm build
+        run: npm run-script build
 
       - name: Deploy production to Netlify
         uses: South-Paw/action-netlify-deploy@v1.2.0
