--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -1,22 +1,35 @@
 name: ci-cd pipeline
 on: push
 jobs:
-  build:
+  name: Install dependencies 🏗️
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - name: Checkout
+        uses: actions/checkout@v3
 
-      - name: install dependencies
-        run: npm install --legacy-peer-deps
+      - name: Install dependencies
+        run: npm install --legacy-peer-deps    
 
-      - name: run tests
+  unit-tests:
+    name: Run tests 🧪
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Run tests
         run: npm test
 
-      - name: linter
+   linter:
+    name: Linter 💄
+    runs-on: ubuntu-latest
+    if: "!contains(github.event.head_commit.message, '[skip ci]')"
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Linter
         run: npm run precommit
-      
-      - name: Build file
-        run: npm run build
   
   deploy:
     name: Deploy 🚀
