--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -9,7 +9,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Install dependencies
-        run: npm install --legacy-peer-deps    
+        run: npm install --legacy-peer-deps --no-frozen-lockfile
 
   unit-tests:
     needs: install-dependencies
