--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -64,4 +64,4 @@ jobs:
           netlify env:set BASE_URL_SHOP $BASE_URL_SHOP
       - name: Deploy
         run: |
-          cd apps/website && netlify deploy --prod --site $NETLIFY_SITE_ID --auth $NETLIFY_AUTH_TOKEN
+          netlify deploy --prod --site $NETLIFY_SITE_ID --auth $NETLIFY_AUTH_TOKEN
