--- a/.github/workflows/production.yml
+++ b/.github/workflows/production.yml
@@ -69,4 +69,4 @@ jobs:
           
       - name: Deploy to Netlify
         run: |
-          netlify deploy --prod --site $NETLIFY_SITE_ID --auth $NETLIFY_AUTH_TOKEN
+          netlify deploy 
